@@ -11,6 +11,8 @@
   the SIGUSR1 signal.
 - Clients that do not send CONNECT as their first command are now
   disconnected.
+- Boolean configuration values may now be specified with true/false as well as
+  1/0.
 
 0.4.2 - 20100203
 ================
